[tool.poetry]
name = "trim_tokenizer"
version = "0.1.0"
description = "Trimming for the unused tokens"
authors = ["Dongkyu Kim <dkkim1005@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.50.0"
torch = "^2.6.0"
numpy = "^1.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
